--- a/spices/cix-dnf.org
+++ b/spices/cix-dnf.org
@@ -1,6 +1,6 @@
 # File           : cix-dnf.org
 # Created        : <2017-08-05 Sat 00:45:48 BST>
-# Modified       : <2017-8-21 Mon 21:38:28 BST> sharlatan
+# Modified       : <2017-11-04 Sat 12:27:10 GMT> Sharlatan
 # Author         : sharlatan
 # Maintainer(s)  :
 # Sinopsis       : Package manager forked from Yum, using libsolv as a dependency resolver
@@ -17,10 +17,118 @@
 | *Info*          |          |
 |-----------------+----------|
 
-
+Dandified Yum (DNF) is the next upcoming major version of Yum. It does package
+management using RPM, libsolv and hawkey libraries. For metadata handling and
+package downloads it utilizes librepo. To process and effectively handle the
+comps data it uses libcomps.
 -----
 * Index
 * Receipts
+** dnf
+*** dnf::options
+
+
+autoremove                remove all unneeded packages that were originally installed as dependencies
+check                     check for problems in the packagedb
+check-update              check for available package upgrades
+clean                     remove cached data
+deplist                   List package's dependencies and what packages provide them
+distro-sync               synchronize installed packages to the latest available versions
+downgrade                 Downgrade a package
+group                     display, or use, the groups information
+help                      display a helpful usage message
+history                   display, or use, the transaction history
+info                      display details about a package or group of packages
+install                   install a package or packages on your system
+list                      list a package or groups of packages
+makecache                 generate the metadata cache
+mark                      mark or unmark installed packages as installed by user.
+provides                  find what package provides the given value
+reinstall                 reinstall a package
+remove                    remove a package or packages from your system
+repolist                  display the configured software repositories
+repoquery                 search for packages matching keyword
+repository-packages       run commands on top of all packages in given repository
+search                    search package details for the given string
+shell                     run an interactive DNF shell
+swap                      run an interactive dnf mod for remove and install one spec
+updateinfo                display advisories about packages
+upgrade                   upgrade a package or packages on your system
+upgrade-minimal           upgrade, but only 'newest' package match which fixes a problem that affects your system
+
+List of Plugin Commands:
+
+builddep                  Install build dependencies for package or spec file
+config-manager            manage dnf configuration options and repositories
+copr                      Interact with Copr repositories.
+debug-dump                dump information about installed rpm packages to file
+debug-restore             restore packages recorded in debug-dump file
+debuginfo-install         install debuginfo packages
+download                  Download package to current directory
+needs-restarting          determine updated binaries that need restarting
+playground                Interact with Playground repository.
+repoclosure               Display a list of unresolved dependencies for repositories
+repograph                 Output a full package dependency graph in dot format
+repomanage                Manage a directory of rpm packages
+reposync                  download all packages from remote repo
+system-upgrade            Prepare system for upgrade to a new release
+
+| OPT                                                          | TYPE | =++V= | =--V= | DESC                                                                                  |
+|--------------------------------------------------------------+------+-------+-------+---------------------------------------------------------------------------------------|
+| =--advisory ADVISORY, --advisories ADVISORY=                 |      |       |       | Include packages needed to fix the given advisory, in updates                         |
+| =--allowerasing=                                             |      |       |       | allow erasing of installed packages to resolve dependencies                           |
+| =--assumeno=                                                 |      |       |       | automatically answer no for all questions                                             |
+| =--bugfix=                                                   |      |       |       | Include bugfix relevant packages, in updates                                          |
+| =--bzs BUGZILLA=                                             |      |       |       | Include packages needed to fix the given BZ, in updates                               |
+| =--color COLOR=                                              |      |       |       | control whether colour is used                                                        |
+| =--cves CVES=                                                |      |       |       | Include packages needed to fix the given CVE, in updates                              |
+| =--debugsolver=                                              |      |       |       | dumps detailed solving results into files                                             |
+| =--destdir DESTDIR, --downloaddir DESTDIR=                   |      |       |       | set directory to copy packages to                                                     |
+| =--disableexcludes [repo], --disableexcludepkgs [repo]=      |      |       |       | disable excludepkgs                                                                   |
+| =--disableplugin [plugin]=                                   |      |       |       | disable plugins by name                                                               |
+| =--disablerepo [repo]=                                       |      |       |       |                                                                                       |
+| =--downloadonly=                                             |      |       |       | only download packages                                                                |
+| =--enableplugin [plugin]=                                    |      |       |       | enable plugins by name                                                                |
+| =--enablerepo [repo]=                                        |      |       |       |                                                                                       |
+| =--enhancement=                                              |      |       |       | Include enhancement relevant packages, in updates                                     |
+| =--forcearch ARCH=                                           |      |       |       | Force the use of an architecture                                                      |
+| =--installroot [path]=                                       |      |       |       | set install root                                                                      |
+| =--newpackage=                                               |      |       |       | Include newpackage relevant packages, in updates                                      |
+| =--noautoremove=                                             |      |       |       | disable removal of dependencies that are no longer used                               |
+| =--nodocs=                                                   |      |       |       | do not install documentations                                                         |
+| =--nogpgcheck=                                               |      |       |       | disable gpg signature checking                                                        |
+| =--noplugins=                                                |      |       |       | disable all plugins                                                                   |
+| =--obsoletes=                                                |      |       |       | enables dnf's obsoletes processing logic                                              |
+| =--refresh=                                                  |      |       |       | set metadata as expired before running the command                                    |
+| =--releasever RELEASEVER=                                    |      |       |       | override the value of $releasever in config and repo files                            |
+| =--repo [repo], --repoid [repo]=                             |      |       |       | enable just specific repositories by an id or a glob, can be specified multiple times |
+| =--repofrompath [repo,path]=                                 |      |       |       | label and path to additional repository, can be specified multiple times.             |
+| =--rpmverbosity [debug level name]=                          |      |       |       | debugging output level for rpm                                                        |
+| =--sec-severity --secseverity=                               |      |       |       | Include security relevant packages{Critical,Important,Moderate,Low}                   |
+| =--security=                                                 |      |       |       | Include security relevant packages, in updates                                        |
+| =--setopt SETOPTS=                                           |      |       |       | set arbitrary config and repo options                                                 |
+| =--showduplicates=                                           |      |       |       | show duplicates, in repos, in list/search commands                                    |
+| =--skip-broken=                                              |      |       |       | resolve depsolve problems by skipping packages                                        |
+| =--version=                                                  |      |       |       | show DNF version and exit                                                             |
+| =-4=                                                         |      |       |       | resolve to IPv4 addresses only                                                        |
+| =-6=                                                         |      |       |       | resolve to IPv6 addresses only                                                        |
+| =-C, --cacheonly=                                            |      |       |       | run entirely from system cache, don't update cache                                    |
+| =-R [minutes], --randomwait [minutes]=                       |      |       |       | maximum command wait time                                                             |
+| =-b, --best=                                                 |      |       |       | try the best available package versions in transactions.                              |
+| =-c [config file], --config [config file]=                   |      |       |       | config file location                                                                  |
+| =-d [debug level], --debuglevel [debug level]=               |      |       |       | debugging output level                                                                |
+| =-e ERRORLEVEL, --errorlevel ERRORLEVEL=                     |      |       |       | error output level                                                                    |
+| =-h, --help, --help-cmd=                                     |      |       |       | show command help                                                                     |
+| =-q, --quiet=                                                |      |       |       | quiet operation                                                                       |
+| =-v, --verbose=                                              |      |       |       | verbose operation                                                                     |
+| =-x [package], --exclude [package], --excludepkgs [package]= |      |       |       | exclude packages by name or glob                                                      |
+| =-y, --assumeyes=                                            |      |       |       | automatically answer yes for all questions                                            |
+|--------------------------------------------------------------+------+-------+-------+---------------------------------------------------------------------------------------|
+*** dnf::examples
+**** dnf-171104122602 
+check with group PACKAGE belong to:
+:    ~$ dnf groupinfo '*' | sed -n '/Group:/h;/'"PACKAGE"'/{x;p;x;p}'
+[[file::*sed][sed]]
 * Refreances
 
 # End of cix-dnf.org
